; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_gap.c_BTM_BleStartAdv.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_gap.c_BTM_BleStartAdv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (...)* }

@BTM_SUCCESS = common dso_local global i32 0, align 4
@BTM_ILLEGAL_VALUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BTM_BleStartAdv() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @BTM_SUCCESS, align 4
  store i32 %3, i32* %2, align 4
  %4 = call %struct.TYPE_2__* (...) @controller_get_interface()
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32 (...)*, i32 (...)** %5, align 8
  %7 = call i32 (...) %6()
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %0
  %10 = load i32, i32* @BTM_ILLEGAL_VALUE, align 4
  store i32 %10, i32* %1, align 4
  br label %15

11:                                               ; preds = %0
  %12 = call i32 (...) @btm_ble_stop_adv()
  %13 = call i32 (...) @btm_ble_start_adv()
  store i32 %13, i32* %2, align 4
  %14 = load i32, i32* %2, align 4
  store i32 %14, i32* %1, align 4
  br label %15

15:                                               ; preds = %11, %9
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}

declare dso_local %struct.TYPE_2__* @controller_get_interface(...) #1

declare dso_local i32 @btm_ble_stop_adv(...) #1

declare dso_local i32 @btm_ble_start_adv(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
